aadding tags to blog edit page

--- a/todo.org
+++ b/todo.org
@@ -1,3 +1,6 @@
-* minutes app
-** add members and timestamp them as they come
-** add minutes (timestamped at the time of adding
+** Cody 
+* Remove lablackey
+* combine all tagging stuff into a forked django tagging
+** codrspace forms
+** autocomplete
+** django-tagging (main)
