one of the subscription types were out of place

--- a/todo.org
+++ b/todo.org
@@ -1,3 +1,12 @@
+* member flow
+** New member
+   set status to new
+   show new members in admin
+   email new user from admin, set to emailed
+   get email, set orientation
+   go to orientation, mark oriented
+** Paid 
+   
 * membership changes
 ** ipn txn_types
    subscr_signup - reset old_expiration_date
